# lab-interface

./: .gitmodules  CMakeLists.txt  load.sh
src/: CMakeLists.txt  main.cpp  main.hpp
src/knob/: CMakeLists.txt  knob.cpp  knob.hpp
src/menu/: CMakeLists.txt  menu.cpp  menu.h  menu.hpp
src/misc/: CMakeLists.txt  miscellaneous_functions.cpp  miscellaneous_functions.hpp
src/sensors/: 2c55.cpp  2c55.hpp  AD22151.cpp  AD22151.hpp  CMakeLists.txt  builtin_clock.cpp  builtin_clock.hpp  fx29.cpp  fx29.hpp  isensors.cpp  isensors.hpp  sensors.cpp  sensors.hpp
